cmake_minimum_required(VERSION 3.12)
project(Array)

set(CMAKE_CXX_STANDARD 14)

add_executable(Array #[[main.cpp 3.cpp]] #[[350.cpp]] #[[242.cpp]] #[[202.cpp]] #[[290.cpp]] #[[205.cpp]]
                #[[451.cpp]] #[[15.cpp]] #[[18.cpp]] #[[454.cpp]] #[[49.cpp]] #[[206.cpp]] #[[2.cpp]] #[[82.cpp]]
                    #[[147.cpp]] #[[61.cpp]] #[[143.cpp]] #[[234.cpp]] #[[20.cpp]] #[[150.cpp]] #[[144.cpp]]
                #[[94.cpp]] #[[341.cpp]] #[[103.cpp]] #[[199.cpp]] #[[279.cpp]] #[[347.cpp 23.cpp 226.cpp 100.cpp
                101.cpp 222.cpp 110.cpp 112.cpp 404.cpp 257.cpp 113.cpp 129.cpp 437.cpp 235.cpp 98.cpp 108.cpp 236.cpp 17.cpp]]
                93.cpp)